@@ -1,5 +1,9 @@
 0.24.8	UNRELEASED
 
+ * Add support for namespace isolation via ``NamespacedRefsContainer``.
+   Implements Git's namespace feature for isolating refs within a single
+   repository using the ``refs/namespaces/`` prefix. (Jelmer Vernooĳ, #1809)
+
 0.24.7	2025-10-23
 
  * Add sparse index support for improved performance with large repositories.
